macros/tests/compile_fail/type_mismatch.stderr
error: expected identifier
  --> tests/compile_fail/type_mismatch.rs:13:31
   |
13 |         NQuote . Name ::= "@" (Proc) ;
   |                               ^
